lubuntu-default-settings (0.32) UNRELEASED; urgency=low

  * usr/bin/start*
   - Remove gnome-keyring workaround, since we have the proper fix for ssh.

 -- Julien Lavergne <gilir@ubuntu.com>  Sat, 16 Mar 2013 10:37:20 +0100

lubuntu-default-settings (0.31) raring; urgency=low

  * Add a new Lubuntu-Nexus7 session.
  * debian/lubuntu-default-settings:
   - Exclude nexus7 specific items.
  * etc/xdg/lubuntu/libfm
   - Use 16px for pcmanfm sidebar.
  * etc/xdg/lubuntu/menus:
   - Exclude xterm and uxterm items from the menu.

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 07 Mar 2013 15:45:33 +0100

lubuntu-default-settings (0.30) raring; urgency=low

  * etc/xdg/lubuntu/lxterminal
   - Add a custom configuration file for lxterminal.
   - Use Ubuntu font in lxterminal.
  * usr/bin/startlubuntu*
   - Install the lxterminal configuration file. 
   - Workaround ssh agent not autostarted properly.
  * usr/share/lubuntu/openbox/rc.xml
   - Add shortcuts for windows tiling (SuperKey + the direction).
   - Set drawContents to "no" on resize, to reduce the use of resize.
  * usr/share/lubuntu/openbox/menu.xml
   - Use gnome-disks for Disk utility item.
   - Remove osmo from the menu, since it's not in the default installation.
     Thanks karl anliot for the notice. (LP: #1035780)
  * etc/xdg/lubuntu/menus/lxgames-applications.menu :
   - Add a specific menu structure for a games session.
  * usr/bin/startlubuntu-lxgames :
   - Add a new script to start a games session, with a specific menu structure.
  * usr/share/xsessions/lxgames.desktop :
   - Add a new session to start a games session.
  * debian/control:
   - Add new binaries, to configure default session on lightdm.
   - Update VCS fields.
  * Reorganize script in debian/ to handle the creation of the new
    default-session binaries.
  * debian/lubuntu-default-settings.install:
   - Keep all files in lubuntu-default-settings.
  * usr/share/applications/lubuntu-browser.desktop: