@@ -2,7 +2,7 @@
 single_click=0
 use_trash=1
 confirm_del=1
-terminal=lxterminal %s
+terminal=x-terminal-emulator %s
 thumbnail_local=1
 thumbnail_max=2048
 
