@@ -1,4 +1,4 @@
 [Command]
 FileManager=pcmanfm %s
-Terminal=lxterminal -e
+Terminal=x-terminal-emulator -e
 Logout=lubuntu-logout
